--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Extensão do VS Code que analisa código C++ em tempo real, avaliando sua eficiência energética. Classifica o código conforme o consumo potencial de recursos e destaca trechos de alto custo, sugerindo otimizações para reduzir gasto de energia e melhorar o desempenho de forma sustentável sem comprometer a funcionalidade.",
   "version": "1.0.0",
   "publisher": "AmbarExtension",
+  "icon": "logoAmbar.png",
   "engines": {
     "vscode": "^1.102.0"
   },
